# harness_agent

./: .gitignore  PLANS.md  README.md  STATUS.md  environment.yml  pyproject.toml  requirements.txt
file_processing/: 场景映射.yaml  类型映射.yaml
rules/: README.md  scoring_rules.yaml
src/harness/: __init__.py  agents.py  cli.py  document_reader.py  excel_reader.py  llm_client.py  pipeline.py  reporting.py  rules.py  schemas.py  templates.py  workflows.py
templates/: README.md  母模板.md
templates/initial/: interview_default.md  meeting_default.md
templates/场景/knowledge/: 格式.md  要求.md
templates/场景/meeting/: 格式.md  要求.md
templates/场景/news/: 格式.md  要求.md
templates/场景/press_conference/: 格式.md  要求.md
templates/场景/专项讨论会/: 格式.md  要求.md
tests/: test_cli.py  test_document_workflows.py  test_e2e_cli.py  test_evaluate_skips.py  test_llm_client.py  test_optimization_data.py  test_optimization_scope.py  test_pipeline.py  test_reporting.py  test_rules.py
tests/fixtures/: interview_input.md  meeting_input.md
